# fog-theme

./: LICENSE  LICENSE.txt  README.md  flake.nix  myst.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
content/: comprehensive.md  main.md  myst.yml  other.md  sink.md
myst-to-html/examples/: simple.yaml
myst-to-html/templates/: root.j2
public/css/: style.css
src/: index.mts  loader.mts  renderer.mts  types.mts
src/fog_theme/: __about__.py  __init__.py  __main__.py
src/fog_theme/templates/: renderers.j2.html
src/templates/: entrypoint.j2.html  page.j2.html  renderers.j2.html
tests/: __init__.py
